--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -186,6 +186,13 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="pushButton_6">
+            <property name="text">
+             <string>Działo</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
