--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -75,24 +75,30 @@
          <layout class="QHBoxLayout" name="horizontalLayout_6">
           <item>
            <widget class="QLabel" name="label">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>Rozmiar pola</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="cellsControl">
-            <property name="suffix">
-             <string> komórek</string>
-            </property>
+           <widget class="QSlider" name="horizontalSlider_2">
             <property name="minimum">
              <number>10</number>
             </property>
             <property name="maximum">
-             <number>1000</number>
+             <number>300</number>
             </property>
             <property name="value">
              <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
             </property>
            </widget>
           </item>
@@ -102,6 +108,12 @@
          <layout class="QHBoxLayout" name="horizontalLayout_7">
           <item>
            <widget class="QLabel" name="label2">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>Prędkość</string>
             </property>
@@ -120,6 +132,9 @@
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="invertedAppearance">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
